Structured the webpage

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/logo.svg">
   
-  <title>Frontend Mentor | News homepage</title>
+  <title>News homepage</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <link rel="stylesheet" href="styles.css">
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -16,45 +16,95 @@
 </head>
 <body>
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
+  <nav>
+    <div>
+      <img src="assets/images/logo.svg">
+    </div>
+    <ul>
+      <li>Home</li>
+      <li>New</li>
+      <li>Popular</li>
+      <li>Trending</li>
+      <li>Categories</li>
+    </ul>
+  </nav>
 
-  The Bright Future of Web 3.0?
+  <main>
 
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
+    <div id="latest">
 
-  Read more
+      <div id="image-container">
+        <img src="assets/images/image-web-3-desktop.jpg">
+      </div>
 
-  New 
+      <div id="info-latest-container">
 
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
+        <h1>The Bright Future of Web 3.0?</h1>
 
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
+        <div>
+          <p>
+            We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+            But is it really fulfilling its promise?
+          </p>
+          <button>Read more</button>
+        </div>
 
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
+      </div>
 
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
+    </div>
 
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
+    <div id="new-card">
+      <h2>New</h2>
+      <div class="card-new">
+        <h3 class="title-article">Hydrogen VS Electric Cars</h3>
+        <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+      </div>
+      <div class="seperator"></div>
+      <div class="card-new">
+        <h3 class="title-article">The Downsides of AI Artistry</h3>
+        <p>What are the possible adverse effects of on-demand AI image generation?</p>
+      </div>
+      <div class="seperator"></div>
+      <div class="card-new">
+        <h3 class="title-article">Is VC Funding Drying Up?</h3>
+        <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+      </div>
+    </div>
 
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-  
+    <div id="recommended">
+      <div class="card-reco">
+        <img src="assets/images/image-retro-pcs.jpg">
+        <div class="info-reco" alt="retro computer">
+          <h2 class="number">01</h2>
+          <h3 class="title-article">Reviving Retro PCs</h3>
+          <p>What happens when old PCs are given modern upgrades?</p>
+        </div>
+      </div>
+
+      <div class="card-reco">
+        <img src="assets/images/image-top-laptops.jpg" alt="Close up shot of a keyboard">
+        <div class="info-reco">
+          <h2 class="number">02</h2>
+          <h3 class="title-article">Top 10 Laptops of 2022</h3>
+          <p>Our best picks for various needs and budgets.</p>
+        </div>
+      </div>
+
+      <div class="card-reco">
+        <img src="assets/images/image-gaming-growth.jpg" alt="Gaming Controller">
+        <div class="info-reco">
+          <h2 class="number">03</h2>
+          <h3 class="title-article">The Growth of Gaming</h3>
+          <p>How the pandemic has sparked fresh opportunities.</p>
+        </div>
+      </div>
+
+    </div>
+  </main> 
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/slippyishappy" target="_blank">Slippy</a>.
   </div>
 </body>
 </html>
