Made it somewhat responsive

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <title>News homepage</title>
 
   <link rel="stylesheet" href="styles.css">
+  <script type="text/javascript" src="script.js" defer></script>
+
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -20,7 +22,10 @@
     <div>
       <img src="assets/images/logo.svg">
     </div>
-    <ul>
+    <div id="menu" hidden>
+      <img src="assets/images/icon-menu.svg">
+    </div>
+    <ul id="tabs" class="active">
       <li>Home</li>
       <li>New</li>
       <li>Popular</li>
@@ -103,8 +108,8 @@
   </main> 
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/slippyishappy" target="_blank">Slippy</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/slippyishappy" target="_blank"> Slippy</a>.
   </div>
 </body>
 </html>
