Fixed some styling issues

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
     <div>
       <img src="assets/images/logo.svg">
     </div>
-    <div id="menu" hidden>
+    <div id="menu">
       <img src="assets/images/icon-menu.svg">
+    </div>
+    <div id="menu-close">
+      <img src="assets/images/icon-menu-close.svg">
     </div>
     <ul id="tabs" class="active">
       <li>Home</li>
