Made the side bar work

--- a/index.html
+++ b/index.html
@@ -19,16 +19,13 @@
 <body>
 
   <nav>
-    <div>
-      <img src="assets/images/logo.svg">
-    </div>
+    <img src="assets/images/logo.svg" alt="logo">
+    
     <div id="menu">
-      <img src="assets/images/icon-menu.svg">
+      <img src="assets/images/icon-menu.svg" alt="menu">
     </div>
-    <div id="menu-close">
-      <img src="assets/images/icon-menu-close.svg">
-    </div>
-    <ul id="tabs" class="active">
+    
+    <ul id="desktop-menu" class="desktop-menu">
       <li>Home</li>
       <li>New</li>
       <li>Popular</li>
@@ -36,6 +33,19 @@
       <li>Categories</li>
     </ul>
   </nav>
+  
+  <div id="mobile-menu" class="mobile-menu">
+    <div id="menu-close">
+      <img src="assets/images/icon-menu-close.svg" alt="close menu">
+    </div>
+    <ul>
+      <li>Home</li>
+      <li>New</li>
+      <li>Popular</li>
+      <li>Trending</li>
+      <li>Categories</li>
+    </ul>
+  </div>
 
   <main>
 
